# PtitPrince_QL

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  RainCloud_Plot.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_tests.yml
ptitprince/: PtitPrince.py  __init__.py
tests/: __init__.py  conftest.py  test_half_violinplot.py  test_notebook_integration.py  test_raincloud.py  test_stripplot.py
tutorial_python/: raincloud_tutorial_python.ipynb
